Sun Jul 19 10:23:05 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Apply
	  trimming of the terms in PrefixedTermIterator after removing the
	  prefix, instead of before.  Allows the special handling for
	  colons to work correctly.

Fri Jun 19 11:14:51 BST 2009  Tom Mortimer <tom@flax.co.uk>

	* xappy/indexerconnection.py: Allow PrefixedTermIter to take an
	  explicit trim length (for removing prefix).
	* xappy/searchconnection.py: Added optional starts_with parameter
	  to iter_terms_for_field().

Tue May 26 07:54:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Don't recalculate all the potentials
	  each time - just update the one which has changed.  About 50%
	  faster in my tests.

Mon May 25 00:39:18 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Display
	  docid in error messages.

Sat May 23 08:29:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Estimate the initial utilities only on
	  the basis of the top 100 results, so that paging through the
	  results further doesn't result in an unstable ordering.

Fri May 22 13:16:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/diversity.py: Add
	  support for "collapse_max" parameter to search, to allow more
	  than 1 hit to be returned in each collapse category.  Also, add a
	  new "reorder_by_collapse" to reorder the results to acheive
	  maximum diversity based on the hits returned.

Thu May 21 06:39:33 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/build_xapian.sh,libs/get_xapian.py: Update xapian packages.

Thu May 14 19:18:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Fallback to importing sha instead of
	  hashlib, for python 2.4 compatibility.
