@@ -18,11 +18,11 @@
 #  $xappylibdir: a checkout of xappy/trunk.
 
 rev="1.1.0"
-trunk_rev="12771"
-matchspy_branchpoint="12771"
+trunk_rev="13032"
+matchspy_branchpoint="13030"
 clustering_branchpoint="12664"
 geospatial_branchpoint="12771"
-postingsources_branchpoint="12771"
+postingsources_branchpoint="13030"
 
 if [ -e "$HOME/xappy" ]; then
 basedir="$HOME/xappy/maketarballs"
