@@ -16,9 +16,6 @@ Open a connection for indexing:
 >>> iconn.add_field_action('text', FieldActions.INDEX_FREETEXT, language='en',
 ...                        spell=True, stop=('basic',))
 
->>> iconn.add_field_action('tag', FieldActions.TAG)
->>> iconn.add_field_action('tag2', FieldActions.TAG)
-
 
 
 >>> for i in xrange(20):
@@ -67,40 +64,6 @@ Asking for a summary of a field which isn't known will raise a KeyError.
 Traceback (most recent call last):
 ...
 KeyError: 'titl'
-
-
-Asking for a top tags of a field when no fields were specified for counting
-tags will raise a SearchError.
-
->>> results.get_top_tags('title', 100)
-Traceback (most recent call last):
-...
-SearchError: Field 'title' was not specified for getting tags
-
-
-Asking for tags in a field which wasn't indexed for tagging will return an
-error:
-
->>> results = sconn.search(q, 0, 20, gettags='title')
-Traceback (most recent call last):
-...
-SearchError: Field 'title' was not indexed for tagging
-
-
-Asking for top tags of a field which wasn't specified for counting tags will
-raise a SearchError.
-
->>> results = sconn.search(q, 0, 20, gettags='tag')
->>> results.get_top_tags('tag', 100)
-[]
->>> results.get_top_tags('tag2', 100)
-Traceback (most recent call last):
-...
-SearchError: Field 'tag2' was not specified for getting tags
->>> results.get_top_tags('text', 100)
-Traceback (most recent call last):
-...
-SearchError: Field 'text' was not specified for getting tags
 
 
 Asking for suggested facets if none were calculated raises a SearchError:
