@@ -1,3 +1,11 @@
+Sun Jul 19 15:37:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,utils/make_xappy_tarballs,
+	  xappy/_checkxapian.py,xappy/doctests/searchconnection_doctest2.txt,
+	  xappy/doctests/searchconnection_doctest3.txt,xappy/fieldactions.py,
+	  xappy/searchconnection.py,xappy/unittests/: Remove TAG feature -
+	  it can be implemented (and more efficiently) using FACET.
+
 Sun Jul 19 10:23:05 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/indexerconnection.py,xappy/searchconnection.py: Apply
